hphp/hack/test/typecheck/disjoint/class.php.exp
File "class.php", line 22, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 22, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(I2 & C1)`
File "class.php", line 23, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 23, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(C1 & I2)`
File "class.php", line 30, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 30, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(I2 & I1)`
File "class.php", line 31, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 31, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(I1 & I2)`
File "class.php", line 36, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 36, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(I2 & T1)`
File "class.php", line 37, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 37, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(T1 & I2)`
File "class.php", line 38, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 38, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(T2 & T1)`
File "class.php", line 39, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 39, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(T1 & T2)`
File "class.php", line 40, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 40, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(T2 & C2)`
File "class.php", line 41, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "class.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "class.php", line 41, characters 16-22:
  Expected `nothing`
  File "class.php", line 3, characters 42-43:
    via this generic `T3`
  File "class.php", line 3, characters 51-59:
  But got `(C2 & T2)`
